[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://hud/blue_orb.png" type="Texture" id=2]
[ext_resource path="res://hud/red_orb.png" type="Texture" id=3]
[ext_resource path="res://hud/green_orb.png" type="Texture" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 170.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 1 )

[node name="CurrentOrbLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
text = "CurrentOrbLabel"

[node name="BlueOrbSprite" type="Sprite" parent="."]
position = Vector2( 15, 35 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="GreenOrbSprite" type="Sprite" parent="."]
position = Vector2( 45, 35 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="RedOrbSprite" type="Sprite" parent="."]
position = Vector2( 75, 35 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
